--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,6 +9,7 @@ services:
   agent:
     image: ebpf:latest
     command: "/agent"
+    pid: "host"
     privileged: true
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock"
