feat: support k8s containers

--- a/.kubernetes/agent.yaml
+++ b/.kubernetes/agent.yaml
@@ -65,6 +65,8 @@ spec:
           name: agent
           command:
             - "/agent"
+            - "--log.level=debug"
+            - "--containers"
           env:
             - name: NODE
               valueFrom:
